feat: Rename repository to cicd-for-modern-ai and fix CI/CD workflows
- Rename project from devops-1-get-started to cicd-for-modern-ai
- Update pyproject.toml: project name, dependencies, URLs, and description
- Fix CI/CD workflows to use uv with pyproject.toml instead of editable installs
- Update all GitHub Actions workflows to use proper dependency installation
- Update all GitLab CI examples to use uv with pyproject.toml
- Configure hatchling build backend for examples repository
- Update Docker image names across all CI/CD configurations
- Fix installation commands that were causing build failures
- Update caching configuration from pip to uv in GitLab CI
- Ensure consistent dependency management across all workflows

This resolves build failures and makes the repository ready for the new name.

--- a/.github/workflows/1-get-started.yml
+++ b/.github/workflows/1-get-started.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "Installing dependencies with uv..."
-          uv pip install --system -e .
+          uv pip install --system --requirement pyproject.toml
       
       - name: Build step
         run: echo "This job builds something (Docker, packages...)"
@@ -58,7 +58,7 @@ jobs:
           version: "latest"
       
       - name: Install dependencies with dev tools
-        run: uv pip install --system -e .[dev]
+        run: uv pip install --system --requirement pyproject.toml --extra dev
       
       - name: Test step
         run: |
@@ -85,7 +85,7 @@ jobs:
           version: "latest"
       
       - name: Install dependencies
-        run: uv pip install --system -e .
+        run: uv pip install --system --requirement pyproject.toml
       
       - name: Train step
         run: |
