--- a/gitlab-examples/3-best-practices-gitlab.yml
+++ b/gitlab-examples/3-best-practices-gitlab.yml
@@ -9,7 +9,7 @@ workflow:
     - if: $CI_COMMIT_TAG
 
 variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  UV_CACHE_DIR: "$CI_PROJECT_DIR/.cache/uv"
   DOCKER_IMAGE_NAME: "${CI_REGISTRY_IMAGE}/ml-model"
   DOCKER_DRIVER: overlay2
 
@@ -23,7 +23,7 @@ stages:
 # Global cache configuration
 cache:
   paths:
-    - .cache/pip
+    - .cache/uv
   key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
 
 # Build stage with modern Docker practices
@@ -49,7 +49,7 @@ build:
   rules:
     - changes:
         - Dockerfile
-        - requirements.txt
+        - pyproject.toml
         - "**/*.py"
 
 # Comprehensive testing
@@ -58,7 +58,9 @@ test:
   image: python:3.11-slim
   needs: []
   before_script:
-    - pip install pytest pytest-cov
+    - curl -LsSf https://astral.sh/uv/install.sh | sh
+    - export PATH="/root/.cargo/bin:$PATH"
+    - uv pip install --system --requirement pyproject.toml --extra dev
   script:
     - echo "Running comprehensive tests..."
     - |
@@ -83,8 +85,11 @@ test:
 security_scan:
   stage: security
   image: python:3.11-slim
+  before_script:
+    - curl -LsSf https://astral.sh/uv/install.sh | sh
+    - export PATH="/root/.cargo/bin:$PATH"
+    - uv pip install --system --requirement pyproject.toml --extra security
   script:
-    - pip install safety bandit
     - safety check --json --output safety-report.json || true
     - bandit -r . -f json -o bandit-report.json || true
   artifacts:
@@ -103,8 +108,11 @@ train_model:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: manual
+  before_script:
+    - curl -LsSf https://astral.sh/uv/install.sh | sh
+    - export PATH="/root/.cargo/bin:$PATH"
+    - uv pip install --system --requirement pyproject.toml
   script:
-    - pip install scikit-learn pandas numpy
     - |
       python -c "
       import json
