feat: Update workflow names to match filenames and fix Dockerfile
- Update GitHub Actions workflow names to match their filenames:
  * '1 - Basic Pipeline' → '1-get-started'
  * '2 - Docker and Artifacts' → '2-understanding-cicd'
  * '3 - Best Practices' → '3-best-practices-github'
  * 'Simple CI/CD Pipeline' → 'github-ci'
- Fix Dockerfile to use uv with pyproject.toml instead of editable install
- Use full path to uv binary to avoid PATH issues during Docker build

This improves consistency between filenames and workflow names,
and resolves Docker build failures in CI/CD pipelines.

--- a/.github/workflows/1-get-started.yml
+++ b/.github/workflows/1-get-started.yml
@@ -2,7 +2,7 @@
 # This shows the fundamental concepts of CI/CD pipelines
 # Equivalent to gitlab-examples/1-get-started.yml
 
-name: 1 - Basic Pipeline
+name: 1-get-started
 
 on:
   push:
